--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -21,6 +21,7 @@
   "tabBar": {
     "color": "#999999",
     "selectedColor": "#5063C2",
+    "borderStyle": "white",
     "list": [
       {
         "pagePath": "pages/index/index",
