feat: 1.重构意见箱页面；2.新增意见详情页，添加投票，评价功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,6 +7,7 @@
     "pages/historys/historys",
     "pages/suggestion/suggestion",
     "pages/suggestionGuide/suggestionGuide",
+    "pages/suggestionDetail/suggestionDetail",
     "pages/addSuggestion/addSuggestion",
     "pages/suggestionComment/suggestionComment",
     "pages/historys/codePage/codePage"
